# svart

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.env/: pyvenv.cfg
src/: embeddings_fixtures.rs  lib.rs
src/core/: embeddings_fixtures.rs  mod.rs  store.rs
tests/: embeddings_fixture.py  test_svart.py
